[package]
name = "roi"
version = "0.1.4"
edition = "2024"
description = "A fast, minimal Rust CLI tool for comparing the contents of two directories. Displays which files or directories exist only in one location or the other, with optional color output, depth limiting, and JSON support."
license = "MIT"
repository = "https://github.com/fibnas/roi"
categories = [
    "command-line-utilities",
    "visualization",
    "finance",
]
keywords = [
    "tui",
    "finance",
    "roi",
    "investing",
    "terminal",
]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "roi"
path = "src/main.rs"
